--- a/app/nav/nav-center.component.html
+++ b/app/nav/nav-center.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<nav-right></nav-right>
+		<nav-left></nav-left>
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 			<h1 class="page-header">Dashboard</h1>
 
