--- a/app/nav/nav-top.component.html
+++ b/app/nav/nav-top.component.html
@@ -7,17 +7,17 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Project name</a>
+			<a class="navbar-brand" href="#">{{name}}</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Dashboard</a></li>
-				<li><a href="#">Settings</a></li>
-				<li><a href="#">Profile</a></li>
+				<li *ngFor="let link of links">
+					<a href="{{link.path}}">{{link.name}}</a>
+				</li>
 			</ul>
-			<form class="navbar-form navbar-right">
+			<!-- <form class="navbar-form navbar-right">
 				<input type="text" class="form-control" placeholder="Search...">
-			</form>
+			</form>-->
 		</div>
 	</div>
 </nav>
