--- a/app/nav/nav-left.component.html
+++ b/app/nav/nav-left.component.html
@@ -2,10 +2,9 @@
 	<ul class="nav nav-sidebar">
 		<li
 			*ngFor="let link of links"
-			[class.active]="link.code == active"
-			(click)="goTo(link);$event.stopPropagation();"
+			routerLinkActive="active"
 		>
-			<a href="{{ link.path }}">{{ link.name }}</a>
+			<a [routerLink]="[link.path]">{{ link.name }}</a>
 		</li>
 	</ul>
 </div>
