--- a/app/account/account-form.component.html
+++ b/app/account/account-form.component.html
@@ -1,31 +1,48 @@
 <div class="container col-lg-5">
-	{{diagnostic}}
-	<h1>Account form</h1>
-	<form>
-		<div class="form-group">
-			<label for="code">Code</label>
-			<input type="text" class="form-control" id="code"
-				   required
-				   [(ngModel)]="model.code"
-				   name="code"
-				   >
-		</div>
-		<div class="form-group">
-			<label for="name">Name</label>
-			<input type="text" class="form-control" id="name"
-				   required
-				   [(ngModel)]="model.name"
-				   name="name"
-			>
-		</div>
-		<div class="form-group">
-			<label for="value">Value</label>
-			<input type="text" class="form-control" id="value"
-				   required
-				   [(ngModel)]="model.value"
-				   name="value"
-				   >
-		</div>
-		<button type="submit" class="btn btn-default">Submit</button>
-	</form>
+	<div  [hidden]="hidden">
+		<h1>Account form</h1>
+		<form (ngSubmit)="onSubmit(); accountForm.reset();" #accountForm="ngForm">
+			<div class="form-group">
+				<label for="code">Code</label>
+				<input type="text" class="form-control" id="code"
+					   required
+					   [(ngModel)]="model.code"
+					   name="code"
+					   #code="ngModel"
+					   >
+				<div [hidden]="code.valid || code.pristine"
+					 class="alert alert-danger">
+					Code is required
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label for="name">Name</label>
+				<input type="text" class="form-control" id="name"
+					   required
+					   [(ngModel)]="model.name"
+					   name="name"
+					   #name="ngModel"
+				>
+				<div [hidden]="name.valid || name.pristine"
+					 class="alert alert-danger">
+					Name is required
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="value">Value</label>
+				<input type="text" class="form-control" id="value"
+					   required
+					   [(ngModel)]="model.value"
+					   name="value"
+					   #value="ngModel"
+					   >
+				<div [hidden]="value.valid || value.pristine"
+					 class="alert alert-danger">
+					Value is required
+				</div>
+			</div>
+			<button type="submit" class="btn btn-default" [disabled]="!accountForm.form.valid">Add account</button>
+		</form>
+	</div>
 </div>
