--- a/app/account/account.component.html
+++ b/app/account/account.component.html
@@ -1,6 +1,6 @@
 <h1 class="page-header row">
 	<div class="col-lg-10">Accounts</div>
-	<div class="col-lg-2"><button type="button" class="btn btn-primary" (click)="addTest()">Add</button></div>
+	<div class="col-lg-2"><button type="button" class="btn btn-primary" (click)="AccountFormComponent.displayForm">Add</button></div>
 </h1>
 <div class="table-responsive" class="row">
 	<table class="table table-striped col-lg-12">
@@ -24,4 +24,5 @@
 		</tbody>
 	</table>
 </div>
-<account-form></account-form>
+<account-form
+		(onAdded)="updateListeAccount($event)"></account-form>
