--- a/app/account/account.component.html
+++ b/app/account/account.component.html
@@ -1,10 +1,14 @@
 <h1 class="page-header row">
 	<div class="col-lg-10">Accounts</div>
-	<div class="col-lg-2"><button type="button" class="btn btn-primary" (click)="AccountFormComponent.displayForm">Add</button></div>
+	<div class="col-lg-2"><button type="button" class="btn btn-primary" (click)="displayForm()">Add</button></div>
 </h1>
-<div class="table-responsive" class="row">
-	<table class="table table-striped col-lg-12">
-		<thead>
+<div class="row">
+	<div class="table-responsive"
+		 [class.col-lg-12]="hiddenForm"
+		 [class.col-lg-8]="!hiddenForm"
+	>
+		<table class="table table-striped">
+			<thead>
 			<tr>
 				<th>#</th>
 				<th>Nom</th>
@@ -12,17 +16,20 @@
 				<th>Valeur</th>
 				<th>%</th>
 			</tr>
-		</thead>
-		<tbody>
+			</thead>
+			<tbody>
 			<tr *ngFor="let account of accounts">
-				<td>{{account.code}}</td>
+				<td></td>
 				<td>{{account.name}}</td>
 				<td></td>
-				<td>{{account.value}}</td>
+				<td>{{account.value.value}}</td>
 				<td>{{account.percentage}}</td>
 			</tr>
-		</tbody>
-	</table>
+			</tbody>
+		</table>
+	</div>
+	<div class="container col-lg-4" [hidden]="hiddenForm">
+		<account-form (onAdded)="updateListeAccount($event)"></account-form>
+	</div>
 </div>
-<account-form
-		(onAdded)="updateListeAccount($event)"></account-form>
+
