--- a/app/account/account.component.html
+++ b/app/account/account.component.html
@@ -7,7 +7,7 @@
 		 [class.col-lg-12]="hiddenForm"
 		 [class.col-lg-8]="!hiddenForm"
 	>
-		<table class="table table-striped">
+		<table class="table table-striped table-hover">
 			<thead>
 			<tr>
 				<th>Nom</th>
@@ -18,7 +18,9 @@
 			</tr>
 			</thead>
 			<tbody>
-			<tr *ngFor="let account of accounts">
+			<tr *ngFor="let account of accounts"
+				[class.danger]="account.value.value < 0"
+			>
 				<td>{{account.name}}</td>
 				<td></td>
 				<td>{{account.value.value}}</td>
